removed kotlin-android-extensions

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ buildscript {
     }
 }
 
+android {
+    ...
+    buildFeatures {
+        viewBinding = true
+    }
+}
+
 allprojects {
     repositories {
         google()
