--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,6 @@ POM_DEVELOPER_NAME=Brandon McAnsh
 
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 systemProp.org.gradle.internal.http.socketTimeout=120000
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
