--- a/android-library.gradle
+++ b/android-library.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: "com.github.ben-manes.versions"
+apply plugin: 'kotlin-parcelize'
 
 android {
     compileSdkVersion androidbuild.compileSdkVersion
@@ -16,6 +17,10 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
         freeCompilerArgs += "-Xjvm-default=compatibility"
+    }
+
+    buildFeatures {
+        viewBinding = true
     }
 
     buildTypes {
