--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,12 @@ buildscript {
         classpath deps.plugins.versions
         classpath deps.plugins.maven_publish
         classpath deps.plugins.dokka
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin"
     }
 }
+
+
+
 
 
 allprojects {
